K1J-1052: Fixed test